Add rank and connectionId. Replaces the need for the /full endpoint. Strip punctuation from title url. Simplify code by adding getPathPart and getTranslatedName